# OpenAlfred

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-entrypoint.sh  docs_utf8.txt  langgraph.json  pyproject.toml  todos.db
scratch/: alfred_fast.yaml  alfred_v2.yaml  alfred_v3.yaml  gen_wake_voice.py  record_samples.py
src/: agent_graph.py  app.py  auth.py  config.py  context_manager.py  database.py  email_service.py  enroll_voice.py  event_bus.py  livekit_worker.py  llm.py  main.py  nodes.py  notification_service.py  prompts.py  scheduler.py  schema.py  supervisor.py  todos.db  tts.py  worker.py
src/body/windows_system/: __init__.py
src/body/windows_system/ear/: __init__.py  ear_service.py  local_livekit_client.py  test_ear.py  test_logic.py  wakeword.py
src/body/windows_system/eye/: setup_eye.ps1
src/core/: __init__.py  auth.py  config.py  database.py  event_bus.py
src/db/: __init__.py  connection.py  email_creds.py  rag.py  reminder.py  settings.py  supervisor_state.py  thread.py  todo.py  user.py
src/livekit_service/: __init__.py  agent_client.py  audio_playback.py  session.py  stt.py
src/logic/: agent.py  context_manager.py  memory_manager.py  nodes.py  prompts.py  schema.py
src/rag/: README.md  chunker.py  cli.py  embedding.py  export_processed.py  image_describer.py  image_handler.py  ingestion.py  md_parser.py  retriever.py  store.py
src/routers/: __init__.py  auth.py  calls.py  email.py  events.py  memory.py  multimodal.py  rag.py  reminders.py  settings.py  threads.py  todos.py
src/services/: email.py  generate_greeting.py  llm.py  mcp_server.py  notification.py  scheduler.py  tts.py  weather.py
src/tools/: __init__.py  browser.py  call_user.py  email_tools.py  eye.py  mcp_client.py  memTool.py  memory.py  rag.py  reminder.py  screenshot.py  search.py  speak.py  todos.py  voice_tools.py  weather.py
src/utils/: auth_utils.py  crypto.py  latency.py  logger.py  structured_output.py  time_utils.py
