[project]
name = "OpenAlfred"
version = "0.1.0"
description = "OpenAlfred Backend Server"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.2.15",
    "langgraph>=1.1.6",
    "langsmith>=0.4.49",
    "openai>=1.68.2,<2.0.0",
    "fastapi>=0.115.5,<1.0.0",
    "uvicorn>=0.29.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "langgraph-cli[inmem]>=0.4.11",
    "langchain-openai>=1.1.0",
    "langgraph-api>=0.7.16",
    "langchain-mcp-adapters>=0.2.1",
    "mem0ai>=0.1.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "livekit-api",
    "livekit-agents",
    "livekit-plugins-silero",
    "dashscope>=1.20.0",
    "langchain-ollama",
    "tzdata>=2024.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
