[project]
name = "OpenAlfred"
version = "0.1.0"
description = "OpenAlfred Backend Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.15",
    "langgraph>=1.1.6",
    "langsmith>=0.4.49",
    "openai>=1.68.2",
    "fastapi>=0.115.5",
    "uvicorn>=0.29.0",
    "python-dotenv>=1.0.0",
    "langgraph-cli[inmem]>=0.4.11",
    "langchain-openai>=1.1.0",
    "langgraph-api>=0.7.16",
    "langchain-mcp-adapters>=0.2.1",
    "mem0ai>=0.1.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "livekit-api",
    "livekit-agents >=1.4.6",
    "livekit-plugins-silero",
    "dashscope>=1.20.0",
    "langchain-ollama",
    "langchain-google-genai>=4.0.0",
    "tzdata>=2024.1",
    "bcrypt>=4.0.0",
    "PyJWT>=2.8.0",
    "tiktoken>=0.7.0",
    "aiosmtplib>=3.0.1",
    "aioimaplib>=1.0.1",
    "cryptography>=42.0.5",
    "langchain-community>=0.4.1",
    "tavily-python>=0.7.23",
    "openwakeword>=0.4.0",
    "pyaudio>=0.2.14",
    "onnxruntime>=1.24.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
